Fixed alignment on slide 2 images

--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,10 @@ button {
 	.bcg-2 {
 		background-size: cover;
 	}
+
+	.image-box-2 {
+		margin: 0 auto;
+	}
 }
 
 @media screen and (min-width: 870px) {
